# saltext-zabbix

./: .copier-answers.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  deploy-package-action.yml  test.yml
.pre-commit-hooks/: check-cli-examples.py  make-autodocs.py
docs/: all.rst  conf.py  index.rst
docs/ref/modules/: all.rst  index.rst  saltext.zabbix.modules.rst  saltext.zabbix.modules.zabbix.rst
docs/ref/returners/: all.rst  index.rst  saltext.zabbix.returners.rst  saltext.zabbix.returners.zabbix_return.rst
docs/ref/states/: all.rst  index.rst  saltext.zabbix.states.rst  saltext.zabbix.states.zabbix_action.rst  saltext.zabbix.states.zabbix_host.rst  saltext.zabbix.states.zabbix_hostgroup.rst  saltext.zabbix.states.zabbix_mediatype.rst  saltext.zabbix.states.zabbix_template.rst  saltext.zabbix.states.zabbix_user.rst  saltext.zabbix.states.zabbix_usergroup.rst  saltext.zabbix.states.zabbix_usermacro.rst  saltext.zabbix.states.zabbix_valuemap.rst
docs/topics/: installation.md
requirements/: base.txt
src/saltext/saltext_zabbix/modules/: zabbix.py
src/saltext/saltext_zabbix/returners/: zabbix_return.py
src/saltext/saltext_zabbix/states/: zabbix_host.py  zabbix_mediatype.py  zabbix_usermacro.py
src/saltext/zabbix/: loader.py
src/saltext/zabbix/modules/: zabbix.py
src/saltext/zabbix/returners/: zabbix_return.py
src/saltext/zabbix/states/: zabbix_action.py  zabbix_host.py  zabbix_hostgroup.py  zabbix_mediatype.py  zabbix_template.py  zabbix_user.py  zabbix_usergroup.py  zabbix_valuemap.py
tests/: conftest.py
tests/unit/modules/: test_zabbix.py
tests/unit/states/: test_action.py  test_host.py  test_template.py  test_valuemap.py
tests/unit/states/zabbix/: test_action.py  test_host.py  test_template.py  test_valuemap.py
